Added comments to collection items.
