# app/Http/Requests/Comments/ReplyStoreRequest.php
@@ -15,8 +15,16 @@ class ReplyStoreRequest extends FormRequest
     {
         return [
             'comment' => 'required|string|max:255',
-            'comment_id' => 'required|exists:comments,id',
-            'collection_id' => 'required|exists:collections,id',
+            'collection_id' => 'required_without:collection_item_id|exists:collections,id',
+            'collection_item_id' => 'required_without:collection_id|exists:collection_items,id',
+        ];
+    }
+
+    public function messages()
+    {
+        return [
+            'collection_id.required_without' => trans('validation.required'),
+            'collection_item_id.required_without' => trans('validation.required'),
         ];
     }
 }
